# Axia-Network-moonbeam

./: CONTRIBUTIONS.md  Cargo.toml  README.md  RELEASE.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  publish-binary.yml  publish-docker.yml  release.yml  version-bump.yml
benchmarking/: frame-weight-template.hbs
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
client/evm-tracing/src/listeners/: call_list.rs  mod.rs  raw.rs
client/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/trace/: Cargo.toml
client/rpc-core/trace/src/: lib.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/txpool/src/: lib.rs
client/rpc-core/txpool/src/types/: content.rs  inspect.rs  mod.rs
client/rpc-core/types/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/trace/: Cargo.toml
client/rpc/txpool/: Cargo.toml
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
docker/: axia-relay.Dockerfile  moonbase-allychain.Dockerfile  moonbeam.Dockerfile
moonbeam-types-bundle/: README.md  index.ts
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: account_key.rs  lib.rs
node/cli/src/: cli.rs  command.rs  lib.rs
node/perf-test/: Cargo.toml
node/perf-test/src/: command.rs  lib.rs  sysinfo.rs  txn_signer.rs
node/perf-test/src/tests/: block_creation.rs  fibonacci.rs  mod.rs  storage.rs
node/service/: Cargo.toml
node/service/src/: client.rs  lib.rs  rpc.rs
node/service/src/chain_spec/: fake_spec.rs  mod.rs  moonbase.rs  moonbeam.rs  moonriver.rs  test_spec.rs
node/service/src/rpc/: tracing.rs
node/src/: main.rs  tests.rs
pallets/allychain-staking/: Cargo.toml  README.md  migrations.md
pallets/allychain-staking/src/: benchmarks.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  weights.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/author-mapping/: Cargo.toml
pallets/author-mapping/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/maintenance-mode/: Cargo.toml
pallets/maintenance-mode/src/: lib.rs  mock.rs  tests.rs
pallets/migrations/: Cargo.toml
pallets/migrations/src/: lib.rs  mock.rs  tests.rs
pallets/proxy-genesis-companion/: Cargo.toml
pallets/proxy-genesis-companion/src/: lib.rs  mock.rs  tests.rs
pallets/xcm-transactor/: Cargo.toml
pallets/xcm-transactor/src/: lib.rs  mock.rs  tests.rs
precompiles/allychain-staking/: Cargo.toml  StakingInterface.sol
precompiles/allychain-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/balances-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/crowdloan-rewards/: Cargo.toml
precompiles/crowdloan-rewards/src/: lib.rs  mock.rs  tests.rs
precompiles/pallet-democracy/: Cargo.toml
precompiles/pallet-democracy/src/: lib.rs  mock.rs  tests.rs
precompiles/relay-encoder/: Cargo.toml
precompiles/relay-encoder/src/: lib.rs  mock.rs  test_relay_runtime.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: data.rs  lib.rs  tests.rs
precompiles/utils/src/data/: xcm.rs
precompiles/xcm_transactor/: Cargo.toml
precompiles/xcm_transactor/src/: lib.rs  mock.rs  tests.rs
precompiles/xtokens/: Cargo.toml
precompiles/xtokens/src/: encoding.rs  lib.rs  mock.rs  tests.rs
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/ext/: Cargo.toml
primitives/ext/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
primitives/xcm/: Cargo.toml
primitives/xcm/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: apis.rs  impl_self_contained_call.rs  lib.rs  migrations.rs
runtime/evm_tracer/: Cargo.toml
runtime/evm_tracer/src/: lib.rs
runtime/moonbase/: Cargo.toml
runtime/moonbase/src/: lib.rs  precompiles.rs
runtime/moonbase/tests/: evm_tracing.rs  integration_test.rs  runtime_apis.rs  xcm_tests.rs
runtime/moonbeam/: Cargo.toml  build.rs
runtime/moonbeam/src/: lib.rs  precompiles.rs
runtime/moonriver/: Cargo.toml
runtime/moonriver/src/: lib.rs  precompiles.rs
runtime/moonriver/tests/: evm_tracing.rs  integration_test.rs  runtime_apis.rs
runtime/moonriver/tests/common/: mod.rs
runtime/relay-encoder/: Cargo.toml
runtime/relay-encoder/src/: alphanet.rs  axia.rs  axiatest.rs  lib.rs
scripts/: README.md  _init_var.sh  build-alphanet-relay-image.sh  bump-node-version.sh  create-substrate-fork.sh  embed-specs.sh  generate-allychain-specs.sh  generate-relay-specs.sh  get-alphanet-relay-image.sh  run-alphanet-allychain.sh  run-betanet-local.sh
specs/: README.md
specs/alphanet/: allychain-embedded-specs-v8.json
specs/moonriver/: allychain-embedded-specs.json
tests/: package-lock.json  package.json
tests/contracts/: sources.ts
tests/para-tests-no-ci/: test-xcm-para.ts
tests/tests/: test-asset-manager.ts  test-author-mapping.ts  test-axia-api.ts  test-bn-128-bounds.ts  test-crowdloan.ts  test-democracy.ts  test-pallet-evm-transfer.ts  test-precompile-assets-erc20.ts  test-staking.ts  test-sudo.ts  test-treasury-proposal.ts
tests/util/: block.ts  constants.ts  governance.ts  para-node.ts  providers.ts  setup-dev-tests.ts  setup-para-tests.ts  substrate-rpc.ts  transactions.ts
tools/: README.md  launch.ts  package-lock.json
tools/github/: generate-release-body.ts  generate-runtimes-body.ts  list-pr-labels.ts  print-version-bump-info.ts
tools/load-testing/: load-gas-loop.ts
(+32 files in other folders)
