[workspace]
exclude = ["bin/utils/moonkey"]
members = [
	"bin/utils/moonkey",
	"node",
	"node/cli",
	"node/service",
	"pallets/maintenance-mode",
	"pallets/migrations",
	"pallets/proxy-genesis-companion",
	"precompiles/utils/macro",
	"runtime/moonbase",
	"runtime/moonbeam",
	"runtime/moonriver",
]

[patch.crates-io]
ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master" }
# axia:help
evm = { git = "https://github.com/axia-tech/evm", branch = "master" }
evm-gasometer = { git = "https://github.com/axia-tech/evm", branch = "master" }
evm-runtime = { git = "https://github.com/axia-tech/evm", branch = "master" }

[profile.release]
panic = "unwind"
