[package]
name = "moonbeam-core-primitives"
authors = ["AxiaStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/AxiaStake/moonbeam/"
version = "0.1.1"

[dependencies]
account = { path = "../primitives/account", default-features = false }
fp-self-contained = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[features]
default = ["std"]
std = ["account/std", "fp-self-contained/std", "sp-core/std", "sp-runtime/std"]
