[package]
name = "moonbeam-client-evm-tracing"
authors = ["AxiaStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/AxiaStake/moonbeam/"
version = "0.1.0"

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.0" }
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }
hex = { version = "0.4", features = ["serde"] }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
