[package]
name = "moonbeam-cli"
authors = ["AxiaStake"]
edition = "2018"
version = "0.15.1"

[dependencies]
log = "0.4.8"
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1" }
structopt = "0.3.8"

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", default-features = false }
perf-test = { path = "../perf-test" }
service = { package = "moonbeam-service", path = "../service", default-features = false }

# Axlib
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-telemetry = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-tracing = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
try-runtime-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev", optional = true }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "master" }

# AXIA
axia-cli = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = [
	"moonbase-native",
	"moonbeam-native",
	"moonriver-native",
	"wasmtime",
	"alphanet-native",
]

alphanet-native = ["axia-service/alphanet-native"]

moonbase-native = ["service/moonbase-native", "alphanet-native"]
moonbeam-native = ["service/moonbeam-native"]
moonriver-native = ["service/moonriver-native"]

moonbase-runtime-benchmarks = ["service/moonbase-runtime-benchmarks"]
runtime-benchmarks = ["service/runtime-benchmarks"]
try-runtime = ["service/try-runtime", "try-runtime-cli"]
wasmtime = ["sc-cli/wasmtime"]
