[package]
name = "pallet-asset-manager"
authors = ["AxiaStake"]
edition = "2018"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.124", optional = true }

# Moonbeam
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Axlib
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

# AXIA
xcm = { git = "https://github.com/axia-tech/axia", branch = "dev", default-features = false }

# Benchmarks
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "dev", optional = true, default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-primitives/std",
	"xcm/std",
]

runtime-benchmarks = ["frame-benchmarking"]
