[package]
name = "pallet-migrations"
authors = ["AxiaStake"]
description = "migrations management pallet"
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"

# Axlib
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[dev-dependencies]
environmental = "1.1.2"

sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
