[package]
name = "pallet-proxy-genesis-companion"
authors = ["AxiaStake"]
description = "A simple pallet that expands pallet-proxy with a genesis configuration"
edition = "2018"
version = "0.1.0"

[dependencies]
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[dev-dependencies]
serde = "1.0.124"

pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"scale-info/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
