[package]
name = "pallet-evm-precompile-balances-erc20"
authors = ["AxiaStake"]
description = "A Precompile to expose a Balances pallet through an ERC20-compliant interface."
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
slices = "0.2.0"

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Axlib
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = [
	"max-encoded-len",
] }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }

[dev-dependencies]
derive_more = { version = "0.99" }
serde = { version = "1.0.100" }
sha3 = "0.8"

pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
