[package]
name = "crowdloan-rewards-precompiles"
authors = ["AxiaStake"]
description = "A Precompile to make crowdloan rewards accessible to pallet-evm"
edition = "2018"
version = "0.6.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Axlib
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-crowdloan-rewards = { git = "https://github.com/axia-tech/crowdloan-rewards", branch = "master", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[dev-dependencies]
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.9"

# Axlib
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = [
	"max-encoded-len",
] }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-scheduler = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

# Cumulus
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-crowdloan-rewards/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
]
