[package]
name = "relay-encoder-precompiles"
authors = ["AxiaStake"]
description = "A Precompile to make relay staking calls encoding accessible to pallet-evm"
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Axlib
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
pallet-staking = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }


# Frontier
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "master", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master", default-features = false }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.3"
serde = "1.0.100"
sha3 = "0.9"

# Axlib
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = [
	"derive",
] }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

# Cumulus
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", branch = "master" }

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-staking/std",
	"axia-scale-codec/std",
	"axia-scale-codec/std",
	"precompile-utils/std",
	"sp-runtime/std",
	"sp-std/std",
]
